css/global.css
/* global.css
 *
 * main css file
 */

/** general formating **/

body {
	background-color: #ffffff;
	margin:	4px;
	padding: 0;
	font-family: "Open Sans", arial, tahoma, verdana, helvetica, sans-serif, serif;
	font-size: 0.9em;
	color: #5a5a5a;
}
body > * {
	margin-left: 20px;
}
img {
	border: none;
}
h1 {
	font-size: 1.5em;
	font-weight: bold;
	color: #308ac5;
}
h2 {
	font-size: 1.2em;
	font-weight: bold;
	padding: 4px 10px 4px 10px;
	margin: 1em;
	color: #ffffff;
	background-color: #308ac5;
	border-radius: 7px;
}
h3 {
	font-size: 1.2em;
	font-weight: bold;
	padding: 4px 10px 4px 10px;
	margin: 1em;
	color: #ffffff;
	background-color: #308ac5;
	border-radius: 7px;
}

h2 img, h3 img {
	padding-top: 5px;
	padding-left: 10px;
}

p.message {
	font-size: 1.05em;
	font-weight: bold;
	color: #308ac5;
}
p.error-message {
	font-size: 1.05em;
	font-weight: bold;
	color: red;
}
.comment {
	font-style: italic;
	color: #555555;
}
.left {
	text-align: left;
}
.center {
	text-align: center;
}
.pre {
	white-space: pre;
}

hr {
	color: #ffffff;
	background-color: #ffffff;
	height: 0px;
	margin-top: 20px;
	border: 0;
}

table {
	border: 0;
	border-collapse: collapse;
}

td, th {
	padding: 1px 8px;
}

a {
	color: #308ac5;
	text-decoration: none;
}
a:hover {
	color: #cc0000;
}

input[type=checkbox], input[type=password], input[type=text], input[type=number], input[type=radio] {
	background: #ffffff;
	border: 1px solid #5090c1;
	border-radius: 5px;
	padding: 3px 5px 3px 5px;
}
input[type=submit], input[type=button], input[type=reset], button {
	background: #ffffff;
	border: 2px solid #8aafce;
	border-radius: 7px;
}
input[type=submit]:hover, input[type=button]:hover, input[type=reset]:hover, button:hover {

}
button:disabled {
	background: #ffffff;
	border: 2px solid #d0d0d0;
	cursor: not-allowed;
}
select {
	background: #ffffff;
	border: 1px solid #d5d5d5;
}

table.error {
	margin: auto;
	color: #d72b3f;
	background-color: #f9f9f9;
}

th.data {
	color: #3c424c;
	background-color: #e0e0e0;
    font-weight: normal;
	font-size: 1.0em;
	padding: 3px 7px;
}

.action {
	cursor: pointer;
	opacity: 1;
}
.noaction {
	cursor: default;
	opacity: 0.3;
}

img.info {
	margin-top: 3px;
	margin-left: 5px;
}

tr th.data{
	border-right: 1px solid #d0d0d0;
	border-left: 1px solid #d0d0d0;
	border-bottom: 1px solid #d0d0d0;
}
th.required {
	text-decoration: underline
}

/**
 ** Page header
 **/

header {
	background-color: #383840;
	color: #cfcfcf;
	margin: 0px 0px 20px 0px;
	width: 100%;
}

/** Top bar */

.topbar {
	margin: 0;
	padding: 5px 1ex;
	text-align: left;
	display: flex;
	flex-flow: row wrap;
}
.conninfo {
	flex:1;
}
.connlinks {
	padding-left:20px;
	padding-right:30px;
}
.language {
	padding-right:5px;
}
.topbar .platform, .topbar .host, .topbar .username, .topbar .port {
	color: #ffffff;
}
.topbar a {
	color: #cfcfcf;
}
.topbar a:hover {
	color: #ffffff;
	text-decoration: underline;
}
.topbar select {
	background-color: #484850;
	color: #cfcfcf;
}

/** Trail **/
.trail {
	margin: 0;
	padding: 5px;
	text-align: left;
	display:flex;
	flex-flow: row wrap;
}
.crumb {
	flex:1;
	padding-left: 3px;
}
.crumb a {
	color: #cfcfcf;
	text-decoration: none;
}
.crumb a:hover {
	color: #ffffff;
	text-decoration: underline;
}
.crumb .icon {
	margin-right: 5px;
}
.trailicons img {
	padding: 1px 5px 1px 5px;
}

/** nav tabs **/
nav {
	display:flex;
}
.tab {
	background-color: #f4f4f4;
	text-align: center;
	vertical-align: top;
	font-size: 1.1em;
	border: 1px solid #dddddd;
	border-top: #ffffff;
	padding: 5px 5px 5px 5px;
}
.tab a {
	color: #828d94;
	display: block;
}
.tab a:hover {
	color: #3c424c;
}
.tab:hover {
	background-color: #ffffff;
	border-bottom: 1px solid #9ea1a6;
}
.tab .icon {
	display: block;
	padding-top: 10px;
}
nav .active a {
	color: #3c424c;
	text-decoration: none;
}
nav .active {
	background-color: #ffffff;
	border-bottom: 1px solid #308ac5;
}

/** footer **/

footer {
}
.bottom_link {
	position: fixed; 
	bottom: 0;
	right: 0;
	margin: 0;
	padding: 4px;
	background: #383840;
	border-top: 1px dotted #999;
	border-left: 1px dotted #999;
	font-size: smaller;
}
.bottom_link {
	background-color: #3c424c;
	color: #cfcfcf;
}
.bottom_link:hover {
	color: #ffffff;
}


/** Other content formating **/

table.data {
	border: 1px solid #e8e8e8;
}
th.data a {
	color: #3c424c;
}
th.data a:hover {
	color: #cc0000;
}
.active a {
	/*font-weight: bold;
	font-size: 1.2em;
	color: #ffffff;*/
}
ul.toplink, ul.navlink {
	list-style: none;
	margin: 0;
	padding: 0;
}

ul.navlink{
	margin:20px 0 20px 20px;
}

ul.toplink li, ul.navlink li {
	display:inline;
	border-left:1px solid #b3b3b3;
	margin:0;padding: 0 2px 0 5px;
}
ul.toplink li:first-child, ul.navlink li:first-child {
	border: none;
	padding-left:0;
}
tr.data1, tr.data2, tr.data3 {
	color: #484848;
	font-size: 0.9em;
}
tr.data1:hover, tr.data2:hover, tr.data3:hover {
	background-color: #eeeeee;
}
tr.data1 td, tr.data2 td, tr.data3 td{
	border-right: 1px solid #dedede;
	border-left: 1px solid #dedede;
}
tr.data1:first-child td, tr.data2:first-child td, tr.data3:first-child td {
	border-top: 0;
}
tr.data1 td:first-child, tr.data2 td:first-child, tr.data3 td:first-child {
	border-left: 0;
}
tr.data1:last-child td, tr.data2:last-child td, tr.data3:last-child td {
	border-bottom: 0;
}
tr.data1 td:last-child, tr.data2 td:last-child, tr.data3 td:last-child {
	border-right: 0;
}
tr:hover td.data1, tr:hover td.data2, tr:hover td.data3 {
	background-color: #eeeeee;
}
tr td.data1, tr td.data2, tr td.data3{
	border-right: 1px solid #dedede;
	border-left: 1px solid #dedede;
}
tr:first-child td.data1, tr:first-child td.data2, tr:first-child td.data3 {
	border-top: 0;
}
tr td.data1:first-child, tr td.data2:first-child, tr td.data3:first-child {
	border-left: 0;
}
tr:last-child td.data1, tr:last-child td.data2, tr:last-child td.data3 {
	border-bottom: 0;
}
tr td.data1:last-child, tr td.data2:last-child, tr td.data3:last-child {
	border-right: 0;
}
.row1, .data1 {
	background-color: #ffffff;
	text-align: left;
}
.row2, .data2 {
	background-color: #f9f9f9;
	text-align: left;
}
.row3, .data3 {background-color: #d4c8a1}
td.opbutton1, td.opbutton2 {
	color: #000000;
	padding: 2px 6px;
	text-align: center;
}
td.opbutton1 a, td.opbutton2 a {
	color: #308ac5;
}
td.opbutton1 a:hover, td.opbutton2 a:hover {
	color: #cc0000;
}
td.opbutton1:hover, td.opbutton2:hover {
	text-decoration: none;
}
a.help {
	color: #A46600;
	vertical-align: super;
	text-decoration: none;
	font-size: 0.8em;
}
pre {
	font-size: 110%;
}
pre.data {
	font-size: 100%;
}
pre.error {
	font-size: 120%;
}
.intro li {
	font-weight: normal;
}

div.fk {
    background: #fff;
	border-left: 1px dotted #000;
	padding: 5px;
}

button {
	cursor: pointer;
}
button:disabled,
button[disabled]{
	cursor: default;
}

input[type=submit], input[type=button] {
	cursor: pointer;
}

table.multiactions {
	margin-top: 5px;
	border: 1px solid #e8e8e8;
}

th.multiactions {
	text-align: left;
	background-color: #e6e6e6;
	font-size: smaller; /* 0.9em */
	padding: 0px 5px;
}
tr.row1 {
	border: 1px solid #d8d8d8;
}

/** Grid div for forms */
div.form-container {
	display: grid;
	grid-template-columns: minmax(70px, min-content) min-content min-content;
	grid-gap: 7px;
}
div.form-label {
	white-space: nowrap;
	background-color: #e6e6e6;
	border-radius: 5px;
	padding-right: 10px;
	padding-left: 10px;
	display: flex;
	align-items: center;
	justify-content: right;
}
div.form-comment {
	display: flex;
	align-items: center;
}
div.required {
	text-decoration: underline
}

/** Specific div for the intro.php page **/
#welcome {
	margin: 20px 20px 40px 20px;
	text-align:center;
}

/** FK browsing **/
div#root {
	position: absolute;
}
div.fk {
    margin-left: 20px;
}
div#fkcontainer {
    margin: 0;
    position: relative;
    width: 100%; 
    background: none;
    border:0px;
}
div.fk_value {
	display:inline-block;
}
.highlight {
	background-color: #FFFF00;
}

/*
** tablesorter JQuery plugin css description
 */

/* tables */

.tablesorter-default thead tr th {
	padding-right: 18px;
}
.tablesorter-default .header,
.tablesorter-default .tablesorter-header {
	background-image: url(../images/bg.gif);
	background-repeat: no-repeat;
	background-position: center right;
	cursor: pointer;
}
.tablesorter-default thead .headerSortUp,
.tablesorter-default thead .tablesorter-headerSortUp,
.tablesorter-default thead .tablesorter-headerAsc {
	background-image: url(../images/asc.gif);
}
.tablesorter-default thead .headerSortDown,
.tablesorter-default thead .tablesorter-headerSortDown,
.tablesorter-default thead .tablesorter-headerDesc {
	background-image: url(../images/desc.gif);
}
.tablesorter-default thead tr .tablesorter-headerDesc, table.tablesorter thead tr .tablesorter-headerAsc {
	background-color: #d0d0d0;
}
.tablesorter-default thead .sorter-false {
	background-image: none;
	padding: 4px;
	cursor: default;
}

/* hidden filter row */

.tablesorter-default .tablesorter-filter-row.hideme td {
	/*** *********************************************** ***/
	/*** change this padding to modify the thickness     ***/
	/*** of the closed filter row (height = padding x 2) ***/
	padding: 1px;
	/*** *********************************************** ***/
	margin: 0;
	line-height: 0;
	cursor: pointer;
}
.tablesorter-default .tablesorter-filter-row.hideme .tablesorter-filter {
	height: 1px;
	min-height: 0;
	border: 0;
	padding: 0;
	margin: 0;
	/* don't use visibility: hidden because it disables tabbing */
	opacity: 0;
	filter: alpha(opacity=0);
}

/* filter widget */

.tablesorter .filtered {
  display: none;
}

.tablesorter-default .tablesorter-filter-row td {
	background: #ffffff;
	border-bottom: #ccc 1px solid;
	line-height: normal;
	text-align: center; /* center the input */
	padding: 1px 3px 1px 3px;
	-webkit-transition: line-height 0.1s ease;
	-moz-transition: line-height 0.1s ease;
	-o-transition: line-height 0.1s ease;
	transition: line-height 0.1s ease;
}

.tablesorter-default input.tablesorter-filter {
	width: 5em;
	font-size: 0.8em;
    border: 1px solid #887F5C;
}
.tablesorter-default select.tablesorter-filter {
	font-size: 0.8em;
}
.tablesorter-default input.disabled {
	display: none;
}

button.filterreset {
	border: none;
	margin-top: 2px;
	padding: 0px;
	color: #308ac5;
	background-color: inherit;
}
th.filtericon {
	vertical-align: bottom;
	width: 3.8em;
}

